--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ aiohttp==3.8.4
 aiosignal==1.3.1
 async-timeout==4.0.2
 attrs==22.2.0
-boto3==1.26.87
-botocore==1.29.87
+boto3~=1.28.10
+botocore~=1.31.10
 certifi==2022.12.7
 charset-normalizer==3.0.1
 ffmpeg-python==0.2.0
@@ -16,7 +16,7 @@ more-itertools==9.1.0
 multidict==6.0.4
 numba==0.56.4
 numpy==1.23.5
-openai==0.27.0
+openai~=0.27.8
 openai-whisper==20230314
 PyAudio==0.2.13
 pyobjc==9.0.1
@@ -180,3 +180,6 @@ tqdm==4.65.0
 typing_extensions==4.5.0
 urllib3==1.26.14
 yarl==1.8.2
+
+langchain~=0.0.242
+python-dotenv~=1.0.0
